[gd_scene load_steps=8 format=3 uid="uid://b82rct4ww7unb"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_hmdeh"]
[ext_resource type="PackedScene" uid="uid://divnqq5okov68" path="res://scenes/Character_02.tscn" id="2_8wpwq"]
[ext_resource type="PackedScene" uid="uid://6bn7ngvtud77" path="res://scenes/Character_04.tscn" id="2_umyr4"]
[ext_resource type="PackedScene" uid="uid://c8annaosaom4f" path="res://scenes/Character_03.tscn" id="2_yu5b6"]
[ext_resource type="PackedScene" uid="uid://cff6tq0u66uho" path="res://scenes/Character.tscn" id="4_rydwy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cgdey"]
size = Vector3(0.7, 2, 0.7)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2denl"]
radius = 25.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_hmdeh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00950241, 1.03209, 0)
shape = SubResource("BoxShape3D_cgdey")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1

[node name="Character_04" parent="." instance=ExtResource("2_umyr4")]
transform = Transform3D(-0.4, 0, 6.03983e-08, 0, 0.4, 0, -6.03983e-08, 0, -0.4, 0, 0, 0)

[node name="Character_03" parent="." instance=ExtResource("2_yu5b6")]
transform = Transform3D(-0.35, 0, 3.0598e-08, 0, 0.35, 0, -3.0598e-08, 0, -0.35, 0, 0, 0)
visible = false

[node name="Character_02" parent="." instance=ExtResource("2_8wpwq")]
transform = Transform3D(-0.35, 0, -5.28485e-08, 0, 0.35, 0, 5.28485e-08, 0, -0.35, 0, 0, 0)
visible = false

[node name="Character" parent="." instance=ExtResource("4_rydwy")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 0, 0, 0)
visible = false

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509577, 0)
shape = SubResource("CylinderShape3D_2denl")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
